// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`zodToMongoSchema > should convert zod object properly 1`] = `
{
  "additionalProperties": false,
  "bsonType": "object",
  "properties": {
    "_id": {
      "bsonType": "objectId",
    },
    "date": {
      "bsonType": "date",
    },
    "enum": {
      "bsonType": "string",
      "enum": [
        "a",
        "b",
      ],
    },
    "nullishNumber": {
      "anyOf": [
        {
          "bsonType": "number",
        },
        {
          "bsonType": "null",
        },
      ],
    },
    "number": {
      "bsonType": "number",
    },
    "optionalString": {
      "bsonType": "string",
    },
    "string": {
      "bsonType": "string",
    },
  },
  "required": [
    "_id",
    "string",
    "number",
    "enum",
    "date",
  ],
}
`;

exports[`zodToMongoSchema > should resolves zod ref properly 1`] = `
{
  "additionalProperties": false,
  "bsonType": "object",
  "properties": {
    "_id": {
      "bsonType": "objectId",
    },
    "a": {
      "bsonType": "string",
      "pattern": "^(?!\\.)(?!.*\\.\\.)([A-Za-z0-9_'+\\-\\.]*)[A-Za-z0-9_+-]@([A-Za-z0-9][A-Za-z0-9\\-]*\\.)+[A-Za-z]{2,}$",
    },
    "b": {
      "bsonType": "string",
      "pattern": "^(?!\\.)(?!.*\\.\\.)([A-Za-z0-9_'+\\-\\.]*)[A-Za-z0-9_+-]@([A-Za-z0-9][A-Za-z0-9\\-]*\\.)+[A-Za-z]{2,}$",
    },
  },
  "required": [
    "_id",
    "a",
    "b",
  ],
}
`;
